--- a/docker-logs-elk/logstash/pipeline/logstash.conf
+++ b/docker-logs-elk/logstash/pipeline/logstash.conf
@@ -15,33 +15,38 @@ output {
     stdout { codec => rubydebug }
 }
 
+
+input {
+  beats {
+    port => 5044
+  }
+}
+
 filter {
-  if [type] == "apache_error_log" {
-
+  if "apache_access" in [tags] {
     grok {
-      index => "APACHE_ERROR_TIME %{DAY} %{MONTH} %{MONTHDAY} %{TIME} %{YEAR}
-APACHE_ERROR_LOG \[%{APACHE_ERROR_TIME:timestamp}\] \[%{LOGLEVEL:loglevel}\] (?:\[client %{IPORHOST:clientip}\] ){0,1}%{GREEDYDATA:errormsg}"
-      match => [ "message", "%{APACHE_ERROR_LOG}" ]
+      # You'll need to customize the pattern for your log format.
+      match => { "message" => "%{COMBINEDAPACHELOG}" }
     }
-
-    if !("_grokparsefailure" in [tags]) {
-
-      mutate {
-        remove_field => [ "message" ]
-        add_field =>  ["timestamp_submitted", "%{@timestamp}"]
-      }
-
-      date {
-        # Try to pull the timestamp from the 'timestamp' field (parsed above with
-        # grok). The apache time format looks like: "18/Aug/2011:05:44:34 -0700"
-        #                        Sat Feb 08 06:31:09 2014
-        match => [ "timestamp", "EEE MMM dd HH:mm:ss yyyy" ]
-        remove_field => [ "timestamp" ]
-      }
-
-      geoip {
-        source => "clientip"
-      }
+    date {
+      match => [ "timestamp" , "dd/MMM/yyyy:HH:mm:ss Z" ]
     }
+  } else if "apache_error" in [tags] {
+     grok {
+      match => { "message" => "Graceful" }
+    }
+    date {
+      match => [ "timestamp" , "dd/MMM/yyyy:HH:mm:ss Z" ]
+    }
+   
+  }
+}
+
+output {
+  elasticsearch {
+    hosts => "192.168.104.99:9200"
+    manage_template => false
+    index => "%{[@metadata][beat]}-%{+YYYY.MM.dd}" 
+    document_type => "%{[@metadata][type]}" 
   }
 }
