--- a/docker-logs-elk/logstash/pipeline/logstash.conf
+++ b/docker-logs-elk/logstash/pipeline/logstash.conf
@@ -5,22 +5,20 @@ input {
 }
 
 filter {
-  if "apache_access" in [tags] {
+  if [type] == "WP" {
     grok {
-      # You'll need to customize the pattern for your log format.
-      match => { "message" => "%{COMBINEDAPACHELOG}" }
+        match => [
+            "message", "\[%{MONTHDAY:day}-%{MONTH:month}-%{YEAR:year} %{TIME:time} %{WORD:zone}\] PHP %{DATA:level}\:  %{GREEDYDATA:error}"
+            ]
+    }
+    mutate {
+        add_field => [ "timestamp", "%{year}-%{month}-%{day} %{time}" ]
+        remove_field => [ "zone", "month", "day", "time" ,"year"]
     }
     date {
-      match => [ "timestamp" , "dd/MMM/yyyy:HH:mm:ss Z" ]
+        match => [ "timestamp" , "yyyy-MMM-dd HH:mm:ss" ]
+        remove_field => [ "timestamp" ]
     }
-  } else if "apache_error" in [tags] {
-     grok {
-      match => { "message" => "Graceful" }
-    }
-    date {
-      match => [ "timestamp" , "dd/MMM/yyyy:HH:mm:ss Z" ]
-    }
-   
   }
 }
 
