--- a/docker-logs-elk/logstash/pipeline/logstash.conf
+++ b/docker-logs-elk/logstash/pipeline/logstash.conf
@@ -1,32 +1,16 @@
-input {
-  beats {
-    port => 5044
-  }
-}
+input { 
+	beats {
+	    port => 5044
+	    host => "0.0.0.0"
+  	}
+} 
 
-filter {
-  if [type] == "WP" {
-    grok {
-        match => [
-            "message", "\[%{MONTHDAY:day}-%{MONTH:month}-%{YEAR:year} %{TIME:time} %{WORD:zone}\] PHP %{DATA:level}\:  %{GREEDYDATA:error}"
-            ]
-    }
-    mutate {
-        add_field => [ "timestamp", "%{year}-%{month}-%{day} %{time}" ]
-        remove_field => [ "zone", "month", "day", "time" ,"year"]
-    }
-    date {
-        match => [ "timestamp" , "yyyy-MMM-dd HH:mm:ss" ]
-        remove_field => [ "timestamp" ]
-    }
-  }
-}
-
-output {
-  elasticsearch {
-    hosts => "192.168.104.99:9200"
-    manage_template => false
-    index => "%{[@metadata][beat]}-%{+YYYY.MM.dd}" 
-    document_type => "%{[@metadata][type]}" 
-  }
+output { 
+	elasticsearch { 
+		hosts => elasticsearch
+		manage_template => false
+    	index => "%{[@metadata][beat]}-%{[@metadata][version]}-%{+YYYY.MM.dd}"
+	} 
+	
+    stdout { codec => rubydebug }
 }
